feat: start auth setup
