# cmd/api/auth.go
@@ -1,0 +1,61 @@
+package main
+
+import (
+	"net/http"
+
+	"github.com/peterintech/psocial/internal/store"
+)
+
+type RegisterUserPayload struct {
+	Username string `json:"username" validate:"required,min=3,max=30"`
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=6,max=72"`
+}
+
+// registerUserHandler godoc
+//
+//	@Summary		Register a new user
+//	@Description	Register a new user with username, email, and password
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		RegisterUserPayload	true	"User registration payload"
+//	@Success		201		{object}	map[string]string	"User registered successfully"
+//	@Failure		400		{object}	map[string]string	"Bad request"
+//	@Failure		500		{object}	map[string]string	"Internal server error"
+//	@Router			/v1/auth/register [post]
+func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
+	var payload RegisterUserPayload
+	if err := readJSON(w, r, &payload); err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
+
+	// Validate the payload
+	if err := Validate.Struct(payload); err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
+
+	user := &store.User{
+		Username: payload.Username,
+		Email:    payload.Email,
+	}
+
+	// hash the password
+	if err := user.Password.Set(payload.Password); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	// store the user in the database
+	if err := app.store.Users.CreateAndInvite(r.Context(), user, "uuidv4"); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, nil); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
